fix: higher contrast for media buttons

--- a/css/whatsapp-web-catppuccin.user.css
+++ b/css/whatsapp-web-catppuccin.user.css
@@ -638,7 +638,7 @@
         --drawer-section-background: var(--base) !important;
         /* new chat icons */
         --round-icon-background: var(--green) !important;
-        --inverse: var(--subtext1) !important;
+        --inverse: var(--text) !important;
         /* title and icon for drawers */
         --drawer-header-title: var(--text) !important;
         /* buttons such as create community */
